# agenthle-base

./: README.md  pyproject.toml  remote_operation_examples.ipynb  run_helloworld.sh  test_eval.sh  test_launch.sh
tasks/cybersecurity/minecraft_exploit/: main.py
tasks/mota_24/: main.py
tasks/mota_24_easy/: main.py  run_magic_tower.sh
utils/: evaluation.py
